--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 <body background="background.jpg">
   <center>
     <h1 class="btn btn-info heading">Object Detection</h1>
-    <h3 id="status"></h3>
+    <br>
+    <br>
+    <h3 id="status" class="btn btn-danger label"></h3>
   </center>
 
   <script src="main.js"></script>
